--- a/docs/index.css
+++ b/docs/index.css
@@ -1,5 +1,6 @@
 :root {
     --white: #eee;
+    --muted: #e1e1e1;
     --black: #222;
 
     /*
@@ -46,6 +47,7 @@ main {
 	flex: 1 1 auto;
 }
 .wrap {
+    max-width: 1440px;
 	margin: auto;
 	padding: 6vh 3vw;
 }
@@ -63,11 +65,38 @@ p a {
     border-bottom-color: currentColor;
 }
 h1 {
-    font-size: 3rem;
+    font-size: 3.2rem;
+    color: var(--black);
+}
+h2 {
+    font-size: 2.6rem;
+    color: var(--black);
+}
+h3 {
+    font-weight: 100;
+    font-size: 2rem;
     color: var(--black);
 }
 img {
     width: 100%;
+}
+ul {
+    margin-left: 0.8rem;
+}
+header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
+header a {
+    margin: 0 1rem;
+    text-decoration: none;
+    padding: 1rem;
+    border-radius: 3px;
+}
+header a:hover {
+    background-color: var(--muted);
 }
 .cover {
     max-height: 50vh;
@@ -77,6 +106,12 @@ img {
     display: flex;
     flex-grow: 1;
 }
+.main {
+    display: flex;
+    justify-content: center;
+    min-height: 500px;
+}
+
 .button {
     text-decoration: none;
     padding: 1rem;
@@ -93,16 +128,24 @@ img {
     background-color: var(--yellow);
     padding: 1rem;
 }
+.yellow * {
+    color: var(--white);
+}
 .green {
     height: 100%;
     background-color: var(--green);
     padding: 1rem;
 }
+.green * {
+    color: var(--white);
+}
 .blue {
     background-color: var(--blue);
     padding: 1rem;
 }
-
+.blue * {
+    color: var(--white);
+}
 
 .brown {
     background-color: var(--brown);
