--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
 	font-size: 16px;
 	box-sizing: border-box;
     word-break: break-word;
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Raleway', sans-serif;
 }
 body, html {
 	overflow-x: hidden;
