--- a/src/index.css
+++ b/src/index.css
@@ -55,6 +55,7 @@ h1 {
     font-size: 3rem;
 }
 h3 {
+    font-weight: 100;
     font-size: 1.5rem;
     text-transform: uppercase;
 }
@@ -67,6 +68,9 @@ a {
 p {
     margin: 0.5rem;
     padding: 0.5rem;
+}
+p, li {
+    line-height: 1.5rem;
 }
 .nav-bar {
 	color: white;
@@ -82,6 +86,7 @@ p {
     background: rgb(var(--blue));
 }
 .wrap {
+    max-width: 1440px;
 	margin: auto;
 	padding: 6vh 3vw;
 }
@@ -134,14 +139,20 @@ p {
 }
 
 .yellow {
+    color: rgb(var(--white));
     background-color: rgb(var(--yellow));
 }
+
 .green {
+    color: rgb(var(--white));
     background-color: rgb(var(--green));
 }
+
 .blue {
+    color: rgb(var(--white));
     background-color: rgb(var(--blue));
 }
+
 .brown {
     background-color: rgb(var(--brown));
 }
