--- a/docs/index.css
+++ b/docs/index.css
@@ -43,8 +43,8 @@ body {
 }
 footer {
     padding: 0.5rem 0;
-    color: rgb(var(--white));
-    background-color: rgb(var(--brown));
+    color: rgb(var(--black));
+    background-color: rgb(var(--yellow));
 }
 footer div {
     padding-top: 0.5rem;
@@ -52,9 +52,17 @@ footer div {
 h1 {
     margin: 0.5rem;
     padding: 0.5rem;
+    font-size: 4rem;
+}
+h2 {
+    margin: 0.5rem;
+    padding: 0.5rem;
     font-size: 3rem;
+    font-weight: 300;
 }
 h3 {
+    margin: 1rem 0.5rem;
+    padding: 0.5rem;
     font-weight: 100;
     font-size: 1.5rem;
     text-transform: uppercase;
@@ -65,12 +73,15 @@ hr {
 a {
     text-decoration: none;
 }
-p {
+p, li {
+    font-size: 1.1rem;
+    line-height: 1.6rem;
     margin: 0.5rem;
     padding: 0.5rem;
+    font-weight: 100;
 }
-p, li {
-    line-height: 1.5rem;
+ul {
+    margin-left: 1.6rem;
 }
 .nav-bar {
 	color: white;
@@ -86,9 +97,9 @@ p, li {
     background: rgb(var(--blue));
 }
 .wrap {
-    max-width: 1440px;
 	margin: auto;
 	padding: 6vh 3vw;
+    max-width: 1440px;
 }
 .gradient {
     width: 100%;
@@ -105,22 +116,27 @@ p, li {
     color: rgb(var(--white));
     background-repeat: no-repeat;
     background-position: top right;
-    background-image: url("/assets/images/flatirons.jpg");
+    background-image: url("/assets/images/flatirons-range.jpg");
 }
 
 .button {
-    text-decoration: none;
     padding: 1rem;
+    border-radius: 3px;
+    text-decoration: none;
+    text-transform: uppercase;
     display: inline-block;
 }
 .button:hover {
     background-color: rgba(0,0,0,0.1);
 }
 .button.border {
-    border-radius: 3px;
     border: 1px solid currentColor;
 }
-
+.main {
+    display: flex;
+    justify-content: center;
+    min-height: 400px;
+}
 .badge {
 	padding: 3px;
     border: none;
@@ -147,7 +163,6 @@ p, li {
     color: rgb(var(--white));
     background-color: rgb(var(--green));
 }
-
 .blue {
     color: rgb(var(--white));
     background-color: rgb(var(--blue));
@@ -157,5 +172,6 @@ p, li {
     background-color: rgb(var(--brown));
 }
 .orange {
+    color: rgb(var(--white));
     background-color: rgb(var(--orange));
 }
