--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,9 @@
 	box-sizing: border-box;
     word-break: break-word;
 	font-family: 'Raleway', sans-serif;
+    transition:
+        background
+        ease-in-out 200ms;
 }
 body, html {
 	overflow-x: hidden;
@@ -44,8 +47,8 @@ body {
 }
 footer {
     padding: 0.5rem 0;
-    color: rgb(var(--black));
-    background-color: rgb(var(--yellow));
+    color: rgb(var(--white));
+    background-color: rgb(var(--brown));
 }
 footer div {
     padding-top: 0.5rem;
@@ -113,18 +116,17 @@ hr {
     height: 0;
     overflow: visible;
 }
+header {
+    top: 0;
+    left: 0;
+    width: 100%;
+    position: absolute;
+}
 .nav-bar {
 	color: white;
-    background: rgb(var(--blue));
 }
-.nav-bar > ul {
-	background: rgb(var(--blue));
-}
-.nav-icon > div {
-    background: rgb(var(--blue));
-}
-.nav-list-main, .nav-list-sub  {
-    background: rgb(var(--blue));
+.nav-tool, .nav-list-main, .nav-list-sub  {
+    background: rgba(var(--black), 0.3);
 }
 .wrap {
 	margin: auto;
@@ -140,7 +142,7 @@ hr {
     background: linear-gradient(var(--gradient));
 }
 .cover {
-    height: 90vh;
+    height: 95vh;
     overflow: hidden;
     background-size: cover;
     color: rgb(var(--white));
