--- a/src/index.css
+++ b/src/index.css
@@ -93,13 +93,19 @@ ul {
 }
 input, textarea, select {
     width: 100%;
+    margin: 0 0.5rem;
+    padding: 0.5rem;
+    max-width: 100%;
     background: none;
+    border-radius: 3px;
     border: 1px solid rgb(var(--black));
 }
 label {
     display: block;
-    margin: 0.5rem 0;
+    margin: 0.5rem;
+    /* padding: 0.5rem; */
     font-size: 0.9rem;
+    text-transform: capitalize;
 }
 object {
     height: 100px;
@@ -153,13 +159,15 @@ header {
 
 .button {
     padding: 1rem;
+    border: none;
     border-radius: 3px;
+    margin: 0.6rem auto;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
 }
 .button:hover {
-    background-color: rgba(0,0,0,0.1);
+    cursor: pointer;
 }
 .button.border {
     border: 1px solid currentColor;
