addmisions process content

--- a/src/assets/partials/faqs.p.html
+++ b/src/assets/partials/faqs.p.html
@@ -1,5 +1,5 @@
 
-<div class="wrap">
+<div class="wrap" id="faq">
     <div class="row center-xs">
         <div class="col-xs">
             <h2>FAQ's</h2>
