--- a/src/assets/partials/verify-insurance.p.html
+++ b/src/assets/partials/verify-insurance.p.html
@@ -1,7 +1,8 @@
 
 <form class="row">
     <div class="col-xs-12">
-        <h3>send us a message</h3>
+        <h2>Verify Insurance</h2>
+        <h4>Complete form below to verify insurance benefits.</h4>
     </div>
     <div class="col-xs-12 col-sm-6">
         <label>first name</label>
