--- a/src/index.css
+++ b/src/index.css
@@ -128,10 +128,16 @@ header {
     position: absolute;
 }
 .nav-bar {
-	color: white;
+	color: rgb(var(--black));
 }
-.nav-tool, .nav-list-main, .nav-list-sub  {
-    background: rgba(var(--black), 0.3);
+.nav-bar a {
+    font-weight: 500;
+    text-decoration: none;
+}
+.nav-bar.active > .nav-tool,
+.nav-bar.active > .nav-list-sub,
+.nav-bar.active > .nav-list-main {
+    background: rgba(var(--white), 0.9);
 }
 .wrap {
 	margin: auto;
@@ -150,10 +156,11 @@ header {
     height: 95vh;
     overflow: hidden;
     background-size: cover;
-    color: rgb(var(--white));
+    color: rgb(var(--black));
     background-repeat: no-repeat;
     background-position: top right;
-    background-image: url("/assets/images/cover.jpg");
+    background-image: url("/assets/images/cover.svg");
+    /* background-image: url("/assets/images/cover.jpg"); */
 }
 
 .button {
@@ -197,7 +204,6 @@ header {
     color: rgb(var(--white));
     background-color: rgb(var(--yellow));
 }
-
 .green {
     color: rgb(var(--white));
     background-color: rgb(var(--green));
