--- a/src/index.css
+++ b/src/index.css
@@ -153,14 +153,14 @@ header {
     background: linear-gradient(var(--gradient));
 }
 .cover {
-    height: 95vh;
+    height: 100vh;
     overflow: hidden;
     background-size: cover;
     color: rgb(var(--black));
     background-repeat: no-repeat;
     background-position: top right;
     background-image: url("/assets/images/cover.svg");
-    /* background-image: url("/assets/images/cover.jpg"); */
+    background-image: url("/assets/images/flatirons-winter.jpg");
 }
 
 .button {
