--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,17 @@
 	outline: none;
     color: inherit;
 	font-size: 16px;
+    max-width: 100%;
 	box-sizing: border-box;
     word-break: break-word;
 	font-family: 'Raleway', sans-serif;
     transition:
-        background
-        ease-in-out 200ms;
+        background ease-in-out 200ms,
+        background-color ease-in-out 200ms;
 }
 body, html {
-	overflow-x: hidden;
+    /* width: 100%; */
+	/* overflow-x: hidden; */
 }
 body {
 	display: flex;
@@ -90,11 +92,16 @@ p, li {
 ul {
     margin-left: 1.6rem;
 }
+textarea {
+    min-height: 100px;
+    max-height: 250px;
+}
 input, textarea, select {
     width: 100%;
-    margin: 0 0.5rem;
-    padding: 0.5rem;
+    min-width: 100%;
     max-width: 100%;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
     background: none;
     border-radius: 3px;
     border: 1px solid rgb(var(--black));
@@ -137,7 +144,7 @@ header {
 .nav-bar.active > .nav-tool,
 .nav-bar.active > .nav-list-sub,
 .nav-bar.active > .nav-list-main {
-    background: rgba(var(--white), 0.9);
+    background-color: rgba(var(--white), 0.9);
 }
 .wrap {
 	margin: auto;
