--- a/docs/index.css
+++ b/docs/index.css
@@ -11,6 +11,7 @@
     */
 
     --white: 238, 238, 238;
+    --muted: 218, 218, 218;
     --black: 34, 34, 34;
     --brown: 86, 65, 56;
     --blue: 46, 134, 171;
@@ -18,7 +19,7 @@
     --orange: 211, 139, 93;
     --green: 88, 129, 87;
 
-    --gradient: 135deg, rgba(var(--yellow), 0.7) 0%, rgba(var(--orange), 0.7) 30%, rgba(var(--blue), 0.7) 100%;
+    --gradient: 135deg, rgba(var(--yellow), 0.9) 0%, rgba(var(--orange), 0.9) 30%, rgba(var(--blue), 0.9) 100%;
 
     scroll-behavior: smooth;
 }
@@ -29,10 +30,13 @@
     color: inherit;
 	font-size: 16px;
 	box-sizing: border-box;
-    word-break: break-word;
 	font-family: 'Raleway', sans-serif;
+    transition:
+        background ease-in-out 200ms,
+        background-color ease-in-out 200ms;
 }
 body, html {
+    width: 100%;
 	overflow-x: hidden;
 }
 body {
@@ -41,13 +45,13 @@ body {
 	flex-direction: column;
 	background-color: rgb(var(--white));
 }
+header, main, footer {
+    width: 100%;
+}
 footer {
     padding: 0.5rem 0;
-    color: rgb(var(--black));
-    background-color: rgb(var(--yellow));
-}
-footer div {
-    padding-top: 0.5rem;
+    color: rgb(var(--white));
+    background-color: rgb(var(--brown));
 }
 h1 {
     margin: 0.5rem;
@@ -64,14 +68,17 @@ h3 {
     margin: 1rem 0.5rem;
     padding: 0.5rem;
     font-weight: 100;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     text-transform: uppercase;
+}
+h4 {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    font-weight: 500;
+    font-size: 1.3rem;
 }
 hr {
     background: white;
-}
-a {
-    text-decoration: none;
 }
 p, li {
     font-size: 1.1rem;
@@ -83,23 +90,66 @@ p, li {
 ul {
     margin-left: 1.6rem;
 }
+textarea {
+    min-height: 100px;
+    max-height: 250px;
+}
+input, textarea, select {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    background: none;
+    border-radius: 3px;
+    border: 1px solid rgb(var(--black));
+}
+label {
+    display: block;
+    margin: 0.5rem;
+    /* padding: 0.5rem; */
+    font-size: 0.9rem;
+    text-transform: capitalize;
+}
+img {
+    width: 100%;
+}
+hr {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    border: 0;
+    border-top: 1px solid rgb(var(--muted));
+    box-sizing: content-box;
+    height: 0;
+    overflow: visible;
+}
+header {
+    top: 0;
+    left: 0;
+    width: 100%;
+    position: absolute;
+}
 .nav-bar {
-	color: white;
-    background: rgb(var(--blue));
+	color: rgb(var(--black));
 }
-.nav-bar > ul {
-	background: rgb(var(--blue));
+.nav-bar a {
+    font-weight: 500;
+    text-decoration: none;
 }
-.nav-icon > div {
-    background: rgb(var(--blue));
-}
-.nav-list-main, .nav-list-sub  {
-    background: rgb(var(--blue));
+.nav-bar.active .nav-tool,
+.nav-bar .nav-list-sub,
+.nav-bar.active .nav-list-main {
+    background: rgba(var(--white), 0.9);
 }
 .wrap {
 	margin: auto;
 	padding: 6vh 3vw;
     max-width: 1440px;
+}
+.main {
+    display: flex;
+    min-height: 400px;
+    justify-content: center;
 }
 .gradient {
     width: 100%;
@@ -110,33 +160,37 @@ ul {
     background: linear-gradient(var(--gradient));
 }
 .cover {
-    height: 90vh;
+    height: 100vh;
     overflow: hidden;
     background-size: cover;
-    color: rgb(var(--white));
+    color: rgb(var(--black));
     background-repeat: no-repeat;
     background-position: top right;
-    background-image: url("/assets/images/flatirons-range.jpg");
+    background-image: url("/assets/images/cover.jpg");
+}
+.logo {
+    height: 5rem;
+}
+.phone {
+    font-size: 1.2rem;
 }
 
 .button {
     padding: 1rem;
+    border: none;
     border-radius: 3px;
+    margin: 0.6rem auto;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
 }
 .button:hover {
-    background-color: rgba(0,0,0,0.1);
+    cursor: pointer;
 }
 .button.border {
     border: 1px solid currentColor;
 }
-.main {
-    display: flex;
-    justify-content: center;
-    min-height: 400px;
-}
+
 .badge {
 	padding: 3px;
     border: none;
@@ -155,10 +209,9 @@ ul {
 }
 
 .yellow {
-    color: rgb(var(--white));
+    color: rgb(var(--black));
     background-color: rgb(var(--yellow));
 }
-
 .green {
     color: rgb(var(--white));
     background-color: rgb(var(--green));
@@ -167,11 +220,42 @@ ul {
     color: rgb(var(--white));
     background-color: rgb(var(--blue));
 }
-
 .brown {
+    color: rgb(var(--white));
     background-color: rgb(var(--brown));
 }
 .orange {
-    color: rgb(var(--white));
+    color: rgb(var(--black));
     background-color: rgb(var(--orange));
+}
+
+/*accordion*/
+.accordion {
+    border-radius: 6px;
+    box-shadow: 0px 0px 5px 0px rgb(var(--muted));
+}
+.accordion > div {
+    align-items: center;
+    justify-content: space-between;
+}
+.accordion-head {
+    padding: 1rem;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid rgb(var(--muted));
+}
+.accordion-body {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s;
+    border-bottom: 1px solid rgb(var(--muted));
+}
+.accordion-body:nth-last-child(1) {
+    border-bottom: none;
+}
+.accordion-body p, .accordion-body li {
+    margin: 1.5rem;
+}
+.accordion-body.active {
+    max-height: 1500px;
 }
