added icon logo, logo optimization

--- a/src/index.css
+++ b/src/index.css
@@ -167,7 +167,7 @@ header {
     background-position: top right;
     background-image: url("/assets/images/cover.jpg");
 }
-.logo {
+.logo-full {
     height: 5rem;
 }
 .phone {
