--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
     --orange: 211, 139, 93;
     --green: 88, 129, 87;
 
-    --gradient: 135deg, rgba(var(--yellow), 0.9) 0%, rgba(var(--orange), 0.9) 30%, rgba(var(--blue), 0.9) 100%;
+    --gradient: 135deg, rgba(var(--yellow), 0.8) 0%, rgba(var(--orange), 0.8) 30%, rgba(var(--blue), 0.8) 100%;
 
     scroll-behavior: smooth;
 }
@@ -56,7 +56,7 @@ footer {
 h1 {
     margin: 0.5rem;
     padding: 0.5rem;
-    font-size: 4rem;
+    font-size: 4.6rem;
 }
 h2 {
     margin: 0.5rem;
@@ -68,7 +68,7 @@ h3 {
     padding: 0.5rem;
     font-weight: 100;
     font-size: 1.6rem;
-    margin: 1rem 0.5rem;
+    margin: 0 0.5rem;
     text-transform: uppercase;
 }
 h4 {
@@ -150,8 +150,13 @@ object {
 }
 .main {
     display: flex;
-    min-height: 400px;
+    height: 500px;
     justify-content: center;
+    background-position: center;
+}
+.main h3 {
+    color: rgb(var(--white));
+    background: rgb(var(--black));
 }
 .gradient {
     width: 100%;
