--- a/docs/index.css
+++ b/docs/index.css
@@ -45,6 +45,9 @@ body {
 	flex-direction: column;
 	background-color: rgb(var(--white));
 }
+main {
+    flex: 1 0;
+}
 header, main, footer {
     width: 100%;
 }
@@ -86,6 +89,9 @@ p, li {
 }
 ul {
     margin-left: 1.6rem;
+}
+em, a, li {
+    font-size: inherit;
 }
 textarea {
     min-height: 100px;
