--- a/docs/index.css
+++ b/docs/index.css
@@ -172,6 +172,7 @@ details {
     justify-content: center;
     color: rgb(var(--black));
     background-position: center;
+    background-repeat: no-repeat;
 }
 .main h3 {
     color: rgb(var(--white));
