--- a/src/index.css
+++ b/src/index.css
@@ -132,7 +132,7 @@ header {
     position: absolute;
 }
 object {
-    width: 100%;
+    pointer-events: none;
 }
 summary {
     padding: 1rem;
@@ -148,9 +148,16 @@ details {
 
 .row {
     margin: 0;
+    margin-right: 0;
+    margin-left: 0;
+}
+.col-xs, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+    padding: 0;
 }
 .nav-bar {
 	color: rgb(var(--black));
+    border-top: 1px solid rgb(var(--black));
+    border-bottom: 1px solid rgb(var(--black));
 }
 .nav-bar a {
     font-weight: 500;
@@ -196,12 +203,23 @@ details {
 }
 .logo-full {
     height: 5rem;
+    padding: 0.5rem;
+    display: block;
 }
 .logo-icon {
+    width: 100%;
     height: 15rem;
+    display: block;
 }
 .phone {
-    font-size: 1.2rem;
+    display: block;
+    padding: 0.5rem;
+}
+.phone svg {
+    /* display: block; */
+}
+.phone svg text {
+    font-size: 1.5rem;
 }
 
 .button {
