--- a/src/index.css
+++ b/src/index.css
@@ -174,16 +174,20 @@ details {
     max-width: 1440px;
 }
 .main {
+    height: 50vh;
     display: flex;
-    height: 500px;
     justify-content: center;
     color: rgb(var(--black));
     background-position: center;
     background-repeat: no-repeat;
 }
+.main h1 {
+    font-size: clamp(2rem, 5vw, 4rem);
+}
 .main h3 {
     color: rgb(var(--white));
     background: rgb(var(--black));
+    font-size: clamp(1rem, 2.5vw, 2rem);
 }
 .gradient {
     width: 100%;
@@ -202,15 +206,23 @@ details {
     background-position: top right;
     background-image: url("/assets/images/cover.jpg");
 }
-.logo-full {
+.cover h1 {
+    margin-top: 0;
+    padding-top: 0;
+    white-space: nowrap;
+    /* font-size: clamp(2rem, 100vw, 4rem); */
+    font-size: max(2rem, min(10vw, 4rem));
+}
+.logo-holo {
     height: 5rem;
     padding: 0.5rem;
     display: block;
 }
-.logo-icon {
+.logo-solid {
     width: 100%;
-    height: 15rem;
     display: block;
+    padding: 0 2rem;
+    max-height: 12rem;
 }
 .phone {
     display: block;
