--- a/src/index.css
+++ b/src/index.css
@@ -252,8 +252,9 @@ details {
 .badge {
 	padding: 3px;
     border: none;
-	filter: brightness(10);
     text-decoration: none;
+    display: inline-block;
+	filter: brightness(10);
 }
 .badge object {
 	width: 48px;
