--- a/docs/index.css
+++ b/docs/index.css
@@ -252,8 +252,9 @@ details {
 .badge {
 	padding: 3px;
     border: none;
-	filter: brightness(10);
     text-decoration: none;
+    display: inline-block;
+	/* filter: brightness(10); */
 }
 .badge object {
 	width: 48px;
@@ -263,7 +264,7 @@ details {
 }
 .badge:hover {
     background: none;
-    filter: brightness(1);
+    /* filter: brightness(1); */
 }
 
 .yellow {
