--- a/src/index.css
+++ b/src/index.css
@@ -94,25 +94,34 @@ ul {
 em, a, li {
     font-size: inherit;
 }
+label {
+    display: block;
+    margin: 0.5rem;
+    font-size: 0.9rem;
+    text-transform: capitalize;
+}
+legend {
+    font-size: 1.5rem;
+}
 textarea {
     min-height: 100px;
     max-height: 250px;
+}
+form {
+    padding: 0 1rem;
+}
+legend {
+    margin-top: 2rem;
 }
 input, textarea, select {
     width: 100%;
     min-width: 100%;
     max-width: 100%;
     padding: 0.5rem;
-    margin: 0 0.5rem;
+    margin: 0.5rem 0;
     background: none;
     border-radius: 3px;
     border: 1px solid rgb(var(--black));
-}
-label {
-    display: block;
-    margin: 0.5rem;
-    font-size: 0.9rem;
-    text-transform: capitalize;
 }
 img {
     width: 100%;
