--- a/src/index.css
+++ b/src/index.css
@@ -329,7 +329,22 @@ details {
     background-repeat: no-repeat;
 }
 .banner {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    color: white;
     display: none;
     flex-direction: row;
     justify-content: space-between;
+    background-color: rgb(var(--blue));
+}
+.banner > button {
+    border: none;
+    background: none;
+    font-size: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+.banner > button:hover {
+    cursor: pointer;
 }
