--- a/docs/index.css
+++ b/docs/index.css
@@ -207,6 +207,13 @@ details {
     justify-content: center;
     background: linear-gradient(var(--gradient));
 }
+.gradient > div {
+    margin-top: 6rem;
+    text-align: center;
+}
+.gradient > div h3 {
+    border-radius: 6px;
+}
 .cover {
     height: 100vh;
     overflow: hidden;
@@ -379,5 +386,17 @@ details {
     }
     .phone svg path {
         display: initial;
+    }
+
+}
+@media screen and (max-height: 600px) {
+    .main {
+        height: 70vh;
+    }
+    .logo-solid {
+        max-height: 6rem;
+    }
+    .cover h1 {
+        font-size: 2rem;
     }
 }
