--- a/dst/index.css
+++ b/dst/index.css
@@ -396,10 +396,9 @@ details {
     padding-left: 1rem;
     padding-right: 1rem;
 }
-.banner > span {
-    width: 95%;
+.banner > a {
+    padding: 1rem;
     text-align: center;
-    padding: 0.5rem 1rem;
     display: inline-block;
 }
 .tile {
