--- a/dst/index.css
+++ b/dst/index.css
@@ -406,6 +406,67 @@ details {
     padding: 1rem;
     min-height: 400px;
 }
+
+.profile-name h4, .profile-name p {
+    margin: 0;
+    padding: 0;
+}
+.profile > button {
+    width: 100%;
+    border: none;
+    padding: 0.3rem;
+    border-radius: 6px;
+    margin: 1rem auto;
+    color: rgb(var(--white));
+    background-color: rgb(var(--black));
+}
+.profile button:hover {
+    cursor: pointer;
+}
+.profile img {
+    border-radius: 6px;
+}
+.profile-description {
+    top: 0;
+    left: 0;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    position: fixed;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    transition: all 300ms ease;
+    transform: translateY(100%);
+    background: rgba(0, 0, 0, 0.3);
+}
+.profile-wrap {
+    width: 50%;
+    padding: 2rem;
+    max-width: 80%;
+    max-height: 80%;
+    margin: 8% auto;
+    overflow-y: auto;
+    min-width: 300px;
+    flex-direction: column;
+    border-radius: 6px;
+    background-color:rgb(var(--white));
+    box-shadow: 0 3px 9px rgba(var(--black), 0.3);
+}
+.profile-wrap img {
+    max-width: 150px;
+    float: left;
+    margin-right: 1rem;
+}
+.profile-close {
+    margin: 1rem;
+    align-self: flex-end;
+}
+.profile-description.active {
+    z-index: 100;
+    transform: translateY(0%);
+}
 @media screen and (max-width: 600px) {
     .phone svg {
         width: 2rem;
@@ -416,6 +477,12 @@ details {
     }
     .phone svg path {
         display: initial;
+    }
+    .profile-wrap {
+        width: initial;
+    }
+    .profile-wrap img {
+        max-width: none;
     }
 }
 @media screen and (max-height: 600px) {
