--- a/dst/index.css
+++ b/dst/index.css
@@ -484,6 +484,9 @@ details {
     .profile-wrap img {
         max-width: none;
     }
+    .main {
+        height: 70vh;
+    }
 }
 @media screen and (max-height: 600px) {
     .main {
