--- a/src/partials/subscribe.p.html
+++ b/src/partials/subscribe.p.html
@@ -5,8 +5,8 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>Click the button to subscribe to our eamil list.</h4>
-            <button id="subscribe-button" class="button border">Subscribe</button>
+            <h4>Subscribe to our newsletter for Flatirons Recovery updates and addiction treatment resources.</h4>
+            <button id="subscribe-button" class="button white">Subscribe</button>
         </div>
     </div>
 </div>
