--- a/src/partials/call-to-action-faq.p.html
+++ b/src/partials/call-to-action-faq.p.html
@@ -4,7 +4,7 @@
     </div>
     <div class="row center-xs">
         <div class="col-xs">
-            <h4>Consider reading our frequently asked questions. Learn more about Flatirons Recovery Center.</h4>
+            <h4>Consider reading our frequently asked questions. Learn more about Flatirons Recovery.</h4>
             <a class="button border" href="/faq">frequently asked questions</a>
         </div>
     </div>
