--- a/src/index.css
+++ b/src/index.css
@@ -395,6 +395,8 @@ details {
     background-color: rgb(var(--blue));
 }
 .banner > button {
+    width: 48px;
+    height: 48px;
     border: none;
     cursor: pointer;
     font-size: 1rem;
