--- a/src/index.css
+++ b/src/index.css
@@ -488,6 +488,12 @@ details {
     }
 }
 @media screen and (max-width: 600px) {
+     h2 {
+        font-size: 2rem;
+    }
+    h4 {
+        font-size: 1.1rem;
+    }
     .phone svg {
         width: 2rem;
         height: 2rem;
