--- a/dst/index.css
+++ b/dst/index.css
@@ -290,7 +290,7 @@ details {
     padding: 1rem;
     border: none;
     border-radius: 3px;
-    margin: 0.6rem auto;
+    margin: 1rem;
     text-decoration: none;
     text-transform: uppercase;
     display: inline-block;
@@ -488,8 +488,11 @@ details {
     }
 }
 @media screen and (max-width: 600px) {
-     h2 {
+    h2 {
         font-size: 2rem;
+    }
+    h3 {
+        font-size: 1.4rem;
     }
     h4 {
         font-size: 1.1rem;
