--- a/src/index.m.css
+++ b/src/index.m.css
@@ -251,7 +251,7 @@ details {
     color: rgb(var(--black));
     background-repeat: no-repeat;
     background-position: top right;
-    background-image: url("/assets/images/cover.jpg");
+    /* background-image: url("/assets/images/cover.jpg"); */
 }
 .cover h1 {
     margin-top: 0;
@@ -480,7 +480,7 @@ details {
     padding-top: 3rem;
 }
 .legit img {
-   width: auto; 
+   width: auto;
 }
 @media screen and (max-width: 1000px) {
     .main h1 {
@@ -516,7 +516,7 @@ details {
     .main {
         height: 70vh;
     }
-    
+
 }
 @media screen and (max-height: 600px) {
     .main {
