heading clean up #38

--- a/src/index.m.css
+++ b/src/index.m.css
@@ -236,6 +236,7 @@ details {
 }
 .main h2 {
     color: rgb(var(--white));
+    text-transform: capitalize;
     background: rgb(var(--black));
     font-size: clamp(1rem, 2.5vw, 2rem);
 }
