updated markup for tagmanager

--- a/src/partials/call-to-action-1.p.html
+++ b/src/partials/call-to-action-1.p.html
@@ -1,4 +1,3 @@
-
 <div class="wrap">
     <div class="row center-xs">
         <h2>Speak With A Professional</h2>
@@ -6,7 +5,7 @@
     <div class="row center-xs">
         <div class="col-xs">
             <div class="sub-heading">If you would like to reach out to a substance abuse treatment professional at Flatirons Recovery</div>
-            <div class="sub-heading">call us at <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a></div>
+            <div class="sub-heading">call us at <a href="tel:303-578-4536">303-578-4536</a></div>
         </div>
     </div>
     <div class="row center-xs">
