--- a/src/index.m.css
+++ b/src/index.m.css
@@ -225,7 +225,7 @@ details {
 .main {
     /* height: 60vh; */
     display: flex;
-    min-height: 60vh;
+    /* min-height: 60vh; */
     justify-content: center;
     color: rgb(var(--black));
     background-position: center;
@@ -241,7 +241,7 @@ details {
     font-size: clamp(1rem, 2.5vw, 2rem);
 }
 .gradient {
-    min-height: 60vh;
+    min-height: 65vh;
     width: 100%;
     height: 100%;
     display: flex;
