--- a/src/index.m.css
+++ b/src/index.m.css
@@ -502,11 +502,14 @@ iframe {
     width: 100%;
 }
 @media screen and (max-width: 1000px) {
-    .main h1 {
+    /* .main h1 {
         font-size: 2.3rem;
-    }
+    } */
 }
 @media screen and (max-width: 600px) {
+    h1 {
+        font-size: 2.6rem;
+    }
     h2 {
         font-size: 2rem;
     }
