moved covid banner

--- a/src/index.m.css
+++ b/src/index.m.css
@@ -406,8 +406,10 @@ details {
     background-repeat: no-repeat;
 }
 .banner {
+    bottom: 0;
     width: 100%;
     color: white;
+    position: absolute;
     background-color: rgb(var(--blue));
 }
 .banner > button {
