clean up form #57

--- a/src/partials/message-us.p.html
+++ b/src/partials/message-us.p.html
@@ -20,11 +20,10 @@
     </div>
     <div class="col-xs-12 col-sm-6">
         <label>payer source</label>
-        <select name="referral">
+        <select name="payer">
             <option value="none" selected disabled>none</option>
             <option value="no insruance">no insurance</option>
             <option value="cash">cash</option>
-            <option value="private insurance">hospital system</option>
             <option value="medicare/medicaid">medicare/medicaid</option>
             <option value="other">other</option>
         </select>
